# kalam2

./: main.py  pyproject.toml
backend/: exported_hand2.py  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: handwriting_routes.py
backend/app/services/: handwriting.py
backend/app/utils/: drawing.py
docs/: README.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/a4/: page.tsx
frontend/src/components/: provider.tsx
frontend/src/lib/: api-hooks.ts  axios.ts
